# madgadget

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  test_script.js
madgadget/: FridaGadget.py  FridaGithub.py  FridaScript.py  GadgetManager.py  __init__.py  exceptions.py
madgadget/android/: APKEditor.py  AndroidPatcher.py  Apktool.py  Zipalign.py
madgadget/commands/: inject.py  main.py  pull.py
